--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
            <div class="hero-content">
             <p class="section-subtitle">Love Your Cavy!</p>
-            <h2 class="h1 hero-title">天竺鼠的<br>新手飼養手冊</h2>
+            <h2 class="h1 hero-title">天竺鼠<br>飼養手冊</h2>
 
             <p class="hero-text">科學正確的餵養可以讓你的天竺鼠更健康地陪伴你，為你帶來更多快樂。</p>
 
