--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header " data-header>
         <div class="container">
             <a href="#">
-                <h1 class="logo"><img src="/guinea-pig-svgrepo-com.svg" alt="" width="40px"> GuineaPiggy</h1>
+                <h1 class="logo"><img src="guinea-pig-svgrepo-com.svg" alt="" width="40px"> GuineaPiggy</h1>
                 
             </a>
                 <button class="nav-toggle-btn" data-nav-toggle-btn aria-label="toggle menu">
@@ -69,7 +69,7 @@
 
            <div class="hero-content">
             <p class="section-subtitle">Love Your Cavy!</p>
-            <h2 class="h1 hero-title">天竺鼠<br>飼養手冊</h2>
+            <h2 class="h1 hero-title">天竺鼠的<br>新手飼養手冊</h2>
 
             <p class="hero-text">科學正確的餵養可以讓你的天竺鼠更健康地陪伴你，為你帶來更多快樂。</p>
 
@@ -567,7 +567,7 @@
             </div>
 
             <div class="footer-bottom">
-                <a href="" class="logo"><img src="/guinea-pig-svgrepo-com.svg" alt="" width="40px">GuineaPiggy</a>
+                <a href="" class="logo"><img src="guinea-pig-svgrepo-com.svg" alt="" width="40px">GuineaPiggy</a>
 
                 <p class="copyright">
                     &copy; 2022 <a href="" class="copyright-link">GuineaPiggy</a>  All Rights Reserved
